--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@use "assets/styles/main";
+@use '@angular/material' as mat;
+@use 'assets/styles/themes/_theme' as app-theming;
+
+@include mat.core();
+
+@include app-theming.generate-custom-palette-css-variables();
+
+@include app-theming.apply-material-theme(app-theming.$myapp-light-theme);
+
+@media (prefers-color-scheme: dark) {
+  @include app-theming.apply-material-theme(app-theming.$myapp-dark-theme);
+}
+
+.mi-app-dark-theme-class {
+  @include app-theming.apply-material-theme(app-theming.$myapp-dark-theme);
+}
