--- a/src/app/shared/layouts/loading/loading.component.html
+++ b/src/app/shared/layouts/loading/loading.component.html
@@ -1,5 +1,5 @@
 <div class="loader-content">
   <div class="loader-circle">
-        <img src="assets/images/giphy.gif" alt="loader">
+        <img src="assets/images/loader.gif" alt="loader">
   </div>
 </div>
