--- a/src/assets/styles/components/_create-user.scss
+++ b/src/assets/styles/components/_create-user.scss
@@ -1,4 +1,4 @@
-.content-subscribe {
+.content-create-user {
   width: 100%;
   height: 100%;
   display: flex;
@@ -23,7 +23,7 @@
     margin-bottom: 16px;
   }
 
-  .subscribe-add-header {
+  .create-user-header {
     width: 100%;
     height: 100%;
     display: flex;
@@ -32,7 +32,7 @@
     flex-direction: column;
     position: relative;
 
-    .close-add-subscribe {
+    .close-create-user {
       width: 100%;
       display: flex;
       justify-content: space-between;
@@ -48,68 +48,8 @@
     }
   }
 
-  .content-form-subscribe {
+  .content-form-create-user {
     width: 100%;
-
-    .filter-report-group {
-      position: relative;
-
-      .clear-btn {
-        background: none;
-        border: none;
-        cursor: pointer;
-        padding: 0 7px;
-        font-weight: 600;
-        font-size: 11px;
-        color: #666;
-      }
-
-      .img-icon {
-        width: 28px;
-        margin-right: 10px;
-      }
-
-      .container-ng-select {
-        width: 100%;
-        height: 42px;
-        border: 1px solid #d1d1d1;
-        border-radius: 8px;
-        padding: 0 9px;
-        font-size: 14px;
-        color: #333;
-        background-color: white;
-
-        .ng-select-container {
-          background-color: white; //Ajuste
-          border: none;
-          outline: none;
-          box-shadow: none;
-          padding: 0;
-          color: theme-palette-color('grays', 800);
-        }
-
-        &.ng-select-focused {
-          &:not(.ng-select-opened) > .ng-select-container {
-            border-color: theme-palette-color('grays', 300);
-            box-shadow: none;
-          }
-        }
-      }
-
-      .input-title {
-        position: absolute;
-        font-size: 12px;
-        color: #A0A0A0;
-        z-index: 1002;
-        pointer-events: none;
-        background: linear-gradient(to bottom, transparent 50%, white 50%);
-        left: 16px;
-        padding: 0 4px;
-        top: 0;
-        transform: translateY(-50%);
-      }
-
-    }
 
 
     .input-group {
@@ -122,7 +62,7 @@
       align-items: center;
       padding: 6px 16px;
       position: relative;
-      margin-bottom: 24px;
+      margin-bottom: 16px;
 
       input {
         background: none;
