--- a/src/assets/styles/components/_table.scss
+++ b/src/assets/styles/components/_table.scss
@@ -1,6 +1,5 @@
 .table-body {
   border-radius: 18px;
-  //background: theme-palette-color('background', 'primary');
   padding: 24px 32px;
   width: 100%;
   height: 100%;
@@ -107,17 +106,13 @@
 
           i {
             position: absolute;
-            font-size: 22px;
+            font-size: 18px;
             right: 10px;
-            top: 10px;
+            top: 12px;
             color: #9b9696;
           }
-
         }
-
       }
-
-
     }
 
     .table-content {
@@ -125,6 +120,32 @@
       overflow: auto;
       margin-top: 28px;
       position: relative;
+
+      .loader-table {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        z-index: 2;
+        background: #FFF;
+
+        img {
+          width: 180px;
+        }
+
+        span {
+          color: #5A5A5A;
+          font-size: 14px;
+          font-weight: 500;
+        }
+      }
+
+      .mat-mdc-table {
+        background: white;
+      }
 
       .col-header {
         display: inline-flex;
@@ -153,6 +174,10 @@
             border-right: 1px solid #E1E1E1;
           }
         }
+      }
+
+      .acciones {
+        background: #28BBC9;
       }
 
       tbody {
