Conexiones con el backend.

--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -6,15 +6,16 @@
     </div>
     <nav class="sidebar-nav">
       <button class="nav-btn"
+              routerLink="/transactions"
+              routerLinkActive="active">
+        <i class="icon-activity"></i> Transacciones
+      </button>
+      <button class="nav-btn"
               routerLink="/founds"
               routerLinkActive="active">
         <i class="icon-id-card"></i> Mis Fondos
       </button>
-      <button class="nav-btn"
-              routerLink="/history"
-              routerLinkActive="active">
-        <i class="icon-activity"></i> Historial
-      </button>
+
     </nav>
   </div>
   <div class="content-body">
