--- a/src/app/shared/layouts/table/table.component.html
+++ b/src/app/shared/layouts/table/table.component.html
@@ -20,16 +20,16 @@
       <table mat-table [dataSource]="tableDataSource">
         <ng-container matColumnDef="nombre">
           <th mat-header-cell *matHeaderCellDef> Fondo</th>
-          <td mat-cell *matCellDef="let element"> {{ element.nombre }}</td>
+          <td mat-cell *matCellDef="let element"> {{ element.name_acquired_fund }}</td>
         </ng-container>
         <ng-container matColumnDef="montoMinimo">
-          <th mat-header-cell *matHeaderCellDef> Monto</th>
-          <td mat-cell *matCellDef="let element"> {{ element.montoMinimo }} COP</td>
+          <th mat-header-cell *matHeaderCellDef> Numero de documento</th>
+          <td mat-cell *matCellDef="let element"> {{ element.document_number }} COP</td>
         </ng-container>
         <ng-container matColumnDef="estado">
           <th mat-header-cell *matHeaderCellDef> Estado</th>
           <td mat-cell *matCellDef="let element">
-            <span class="estado" [ngClass]="element.estado">{{ element.estado }}</span>
+            <span class="estado" [ngClass]="element.estado">{{ element.transaction_type }}</span>
           </td>
         </ng-container>
         <ng-container matColumnDef="acciones">
